<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/scenariobg" >           

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtTimer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.29"
            android:text="@string/timer_initial_seconds"
            android:layout_marginLeft="40sp"
            android:paddingTop="10sp"
            android:textSize="40sp" 
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/txtLives"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/lives_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:paddingTop="10sp"
            android:textSize="40sp" 
            android:textColor="#FFFFFF"/>

        <ImageView
            android:id="@+id/imgFraiLives"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginRight="40sp"
            android:src="@drawable/frai"
            android:contentDescription="@string/imgFraiLivesDescription" />
    </LinearLayout>
    
    <GridView
        android:id="@+id/gridViewChips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:numColumns="4" >
    </GridView>
    
</LinearLayout>